rename `ModelInfo` to `AppMetadata`
