# src/shared/openapi.yaml
@@ -1,19 +1,20 @@
+
 openapi: 3.0.0
 info:
   title: FlaskML
   version: 1.0.0
   description: API for processing machine learning inputs and returning results.
 paths:
-  /info:
+  /api/app_metadata:
     get:
-      summary: Get Info Page
+      summary: Get App Metadata
       responses:
         '200':
-          description: Info page rendered in markdown
+          description: App metadata
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ModelInfo'
+                $ref: '#/components/schemas/AppMetadata'
 
   /api/routes:
     get:
@@ -86,7 +87,7 @@ paths:
 components:
   schemas:
     # Info Page models
-    ModelInfo:
+    AppMetadata:
       type: object
       required: [info, name, author, version]
       properties:
@@ -99,7 +100,7 @@ components:
           type: string
         name:
           type: string
-          example: "Image Super Resolution"
+          example: "Face Match App"
       example:
         info: "# Welcome to the Face Match App\n\nThis app will help you to match faces in your images..."
 
